# fonts

./: .gitignore  .gitmodules  AGENTS.md  README.md  broken.lock.json  justfile  webfonts-vf.json  webfonts.json
.github/workflows/: update-fonts.yml
data/: README.md  google-fonts-v2.min.json  index.html
metadata/: README.md  cli.py  invalid.csv  webfonts.metadata.json
sdks/google-fonts-js/scripts/: minimize.ts
sdks/webfonts-rs/: Cargo.toml  README.md
tools/: README.md  assert_family_id.py  assert_max_vf_2.py  assert_style.py  build_lockfile.py  d_psnames.py  d_unicodes.py  fetch_webfonts.py  find_missing_fonts_svg.py  find_smallest_fonts.py  fonts2svg.py  google_fonts_metadata_stats.py  refresh.sh  requirements.txt
www/: components.json  jest.config.js  next.config.ts  package.json  pnpm-lock.yaml  types.ts
www/app/: layout.tsx  not-found.tsx  page.tsx
www/app/[id]/: interactive-section.tsx  page.tsx
www/app/api/popular/: README.md  route.ts  stats.json
www/app/api/search/: README.md  route.ts
www/app/developers/: page.tsx
www/components/: font-item.tsx  font-style-item.tsx  font-stylesheet.tsx  grida-logo.tsx  header.tsx  infinite-font-list.tsx  strict-font-preview-boundary.tsx
www/contexts/: font-list-context.tsx
www/hooks/: use-fonts-list.ts
www/lib/: font-utils.md  font-utils.ts  fontid.md  fontid.ts  fonts-actions.ts  fonts-utils.ts  popular-utils.ts
www/lib/__tests__/: font-utils.test.ts  fontid.test.ts
www/public/: subsets.json  webfonts-vf.json  webfonts.json  webfonts.metadata.json
www/public/draft/: languages.json
(+1 files in other folders)
